--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,6 @@
 <nav>
-    ERP Compras
+    <header>
+        <h1>ERP Compras</h1>
+        <img routerLink="/" src="assets/home-2.svg">
+    </header>
 </nav>
