--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,3 +1,14 @@
-<h1>Bienvenidos a nuestra aplicación</h1>
-<button routerLink="/listado-proveedores">Proveedores</button>
-<button routerLink="/listado-productos">Productos</button>
+<div class="container">
+    <div class="fila inicio">
+        <button class="jumbo" routerLink="/listado-proveedores">
+            <img src="assets/customer.svg" alt="">
+            Proveedores
+        </button>
+        <button class="jumbo" routerLink="/listado-productos">
+            <img src="assets/bar-code.svg" alt="">
+            Productos
+        </button>
+    </div>
+</div>
+
+
