--- a/src/app/productos/listado-productos/listado-productos.component.html
+++ b/src/app/productos/listado-productos/listado-productos.component.html
@@ -1,2 +1,22 @@
-<h1>Listado de productos</h1>
-<button routerLink="/">Inicio</button>
+<div class="container">
+    <div class="card">
+        <div class="fila">
+            <div class="col-100 titulo">
+                <h1>Listado de productos</h1>
+            </div>
+        </div>
+        <hr>
+        <table class="clientes">
+            <tr>
+                <th>Cod. sku</th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+            </tr>
+            <tr *ngFor="let producto of productos">
+                <td>{{producto?.sku}}</td>
+                <td>{{producto?.nombre}}</td>
+                <td>{{producto?.descripcion}}</td>
+            </tr>
+        </table>
+    </div>
+</div>
