--- a/src/app/productos/listado-productos/listado-productos.component.html
+++ b/src/app/productos/listado-productos/listado-productos.component.html
@@ -3,6 +3,7 @@
         <div class="fila">
             <div class="col-100 titulo">
                 <h1>Listado de productos</h1>
+                <button routerLink="/crear-producto">Añadir producto</button>
             </div>
         </div>
         <hr>
