--- a/src/app/productos/crear-producto/crear-producto.component.html
+++ b/src/app/productos/crear-producto/crear-producto.component.html
@@ -1,1 +1,48 @@
-<p>crear-producto works!</p>
+<div class="container">
+    <div class="card w-60">
+        <div class="fila">
+            <div class="col-100 titulo">
+                <h1>Nuevo producto</h1>
+            </div>
+        </div>
+        <hr>
+        <form [formGroup]="formProducto" (ngSubmit)="sendProducto()">
+            <div class="fila">
+                <div class="col-100 pila">
+                    <label for="nombre">NOMBRE</label>
+                    <input type="text" id="nombre" formControlName="nombre">
+                </div>
+            </div>
+            <div class="fila">
+                <div class="col-100 pila">
+                    <label for="sku">Código sku</label>
+                    <input type="text" id="sku" formControlName="sku">
+                </div>
+            </div>
+            <div class="fila">
+                <div class="col-100 pila">
+                    <label for="descripcion">Descripción</label>
+                    <input type="text" id="descripcion" formControlName="descripcion">
+                </div>
+            </div>
+            <div class="fila">
+                <div class="col-100 pila">
+                    <label for="precio">Precio</label>
+                    <input type="number" id="precio" formControlName="precio">
+                </div>
+            </div>
+            <div class="fila">
+                <div class="col-100 pila">
+                    <label for="proveedor">Proveedor</label>
+                    <input type="text" id="proveedor" formControlName="proveedor">
+                </div>
+            </div>
+            <div class="fila">
+                <div class="col-100 botones">
+                    <button type="button" class="outline" routerLink="/listado-productos">Cancelar</button>
+                    <button type="submit" class="m-l-small">Añadir</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
