--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -45,7 +45,7 @@ form {
             cursor: not-allowed;
         }
 
-        &.ng-invalid {
+        &.invalid {
             border: 1px solid $danger;
         }
 
