--- a/src/styles/components/_tables.scss
+++ b/src/styles/components/_tables.scss
@@ -7,7 +7,10 @@ table {
             text-align: left;
         }
         td:nth-child(3) {
-            text-align: right;
+            text-align: left;
+        }
+        td:nth-child(4) {
+            text-align: center;
         }
     }
 
